; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_usage.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"Usage: ./disque-server [/path/to/disque.conf] [options]\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"       ./disque-server - (read config from stdin)\0A\00", align 1
@.str.2 = private unnamed_addr constant [40 x i8] c"       ./disque-server -v or --version\0A\00", align 1
@.str.3 = private unnamed_addr constant [37 x i8] c"       ./disque-server -h or --help\0A\00", align 1
@.str.4 = private unnamed_addr constant [51 x i8] c"       ./disque-server --test-memory <megabytes>\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"Examples:\0A\00", align 1
@.str.6 = private unnamed_addr constant [59 x i8] c"       ./disque-server (run the server with default conf)\0A\00", align 1
@.str.7 = private unnamed_addr constant [46 x i8] c"       ./disque-server /etc/disque/7711.conf\0A\00", align 1
@.str.8 = private unnamed_addr constant [36 x i8] c"       ./disque-server --port 7777\0A\00", align 1
@.str.9 = private unnamed_addr constant [61 x i8] c"       ./disque-server --port 7777 --slaveof 127.0.0.1 8888\0A\00", align 1
@.str.10 = private unnamed_addr constant [63 x i8] c"       ./disque-server /etc/mydisque.conf --loglevel verbose\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage() #0 {
  %1 = load i32, i32* @stderr, align 4
  %2 = call i32 @fprintf(i32 %1, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.3, i64 0, i64 0))
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.4, i64 0, i64 0))
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.6, i64 0, i64 0))
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.7, i64 0, i64 0))
  %17 = load i32, i32* @stderr, align 4
  %18 = call i32 @fprintf(i32 %17, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.8, i64 0, i64 0))
  %19 = load i32, i32* @stderr, align 4
  %20 = call i32 @fprintf(i32 %19, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.9, i64 0, i64 0))
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 @fprintf(i32 %21, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.10, i64 0, i64 0))
  %23 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
